--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -121,7 +121,9 @@
     "NAME_REQUIRED": "Введіть ім'я",
     "ACCEPT_TERMS": "Будь ласка, прийміть Умови використання та Політику конфіденційності",
     "PROFILE_NOT_LOADED": "Не вдалося завантажити профіль",
-    "INVALID_BUDGET": "Будь ласка, введіть коректну суму бюджету"
+    "INVALID_BUDGET": "Будь ласка, введіть коректну суму бюджету",
+    "FILL_REQUIRED_FIELDS": "Заповніть обов'язкові поля",
+    "INVALID_QUANTITY": "Введіть коректну кількість"
   },
   "SUCCESS": {
     "MEMBER_ADDED": "Члена сім'ї успішно додано",
@@ -173,6 +175,15 @@
   "BUTTONS.RESET_PASSWORD": "Скинути пароль",
   "SUCCESS.CODE_SENT": "Код підтвердження надіслано на вашу пошту",
   "SUCCESS.PASSWORD_RESET": "Пароль успішно скинуто",
+  "ADD_TO_INVENTORY": "Додати до холодильника",
+  "EDIT_ITEM": "Редагувати продукт",
+  "SELECT_PRODUCT": "Оберіть продукт",
+  "SEARCH_PRODUCTS": "Пошук продуктів...",
+  "NO_PRODUCTS_FOUND": "Продуктів не знайдено",
+  "CHANGE_PRODUCT": "Змінити продукт",
+  "QUANTITY": "Кількість",
+  "EXPIRY_DATE": "Термін придатності",
+  "EXPIRY_DATE_FORMAT": "Формат: РРРР-ММ-ДД (наприклад 2024-12-31)",
   "FRIDGE": {
     "EMPTY_TITLE": "Холодильник порожній",
     "EMPTY_SUBTITLE": "Додайте продукти після походу в магазин",
