Add custom recipe generation and expiring products support in recipes

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -123,7 +123,11 @@
     "PROFILE_NOT_LOADED": "Failed to load profile",
     "INVALID_BUDGET": "Please enter a valid budget amount",
     "FILL_REQUIRED_FIELDS": "Please fill in all required fields",
-    "INVALID_QUANTITY": "Please enter a valid quantity"
+    "INVALID_QUANTITY": "Please enter a valid quantity",
+    "DISH_NAME_REQUIRED": "Please enter a dish name",
+    "RECIPE_NOT_FOUND": "Recipe not found",
+    "RECIPE_NOT_SAVED": "Please save the recipe first",
+    "RECIPE_NAME_REQUIRED": "Recipe name is required"
   },
   "SUCCESS": {
     "MEMBER_ADDED": "Family member successfully added",
@@ -136,7 +140,11 @@
     "LANGUAGE_CHANGED": "Language changed successfully",
     "ITEM_DELETED": "Item removed from fridge",
     "ITEM_ADDED": "Item added to fridge",
-    "ITEM_UPDATED": "Item updated"
+    "ITEM_UPDATED": "Item updated",
+    "RECIPE_GENERATED": "Recipe successfully generated!",
+    "RECIPE_SAVED": "Recipe saved successfully",
+    "RECIPE_COOKED": "Great! Ingredients deducted from inventory",
+    "RECIPE_DELETED": "Recipe deleted"
   },
   "I_AGREE_TO": "I agree to the",
   "AND": "and",
@@ -193,5 +201,56 @@
   "CHANGE_PRODUCT": "Change Product",
   "QUANTITY": "Quantity",
   "EXPIRY_DATE": "Expiry Date",
-  "EXPIRY_DATE_FORMAT": "Format: YYYY-MM-DD (e.g. 2024-12-31)"
+  "EXPIRY_DATE_FORMAT": "Format: YYYY-MM-DD (e.g. 2024-12-31)",
+  "RECIPES": {
+    "GENERATE": "Generate Recipe",
+    "FROM_INVENTORY": "From Inventory",
+    "FROM_INVENTORY_DESC": "Generate a recipe using products from your fridge",
+    "FROM_INVENTORY_INFO": "We'll create a delicious recipe using the products you have in your fridge",
+    "CUSTOM": "Custom Recipe",
+    "CUSTOM_DESC": "Generate a recipe for a specific dish",
+    "CUSTOM_INFO": "Tell us what dish you want to cook, and we'll create a recipe with ingredients and instructions",
+    "EXPIRING": "Use Expiring Products",
+    "EXPIRING_DESC": "Recipe ideas for products that are about to expire",
+    "SAVED": "Saved Recipes",
+    "EMPTY_TITLE": "No saved recipes yet",
+    "EMPTY_SUBTITLE": "Generate and save recipes to see them here",
+    "PORTIONS": "Number of servings",
+    "SERVINGS": "servings",
+    "MINUTES": "min",
+    "KCAL": "kcal",
+    "INGREDIENTS": "Ingredients",
+    "INSTRUCTIONS": "Cooking Instructions",
+    "GENERATING": "Generating recipe...",
+    "GENERATE_BUTTON": "Generate Recipe",
+    "SAVE": "Save Recipe",
+    "GENERATE_NEW": "Generate Another",
+    "MISSING_PRODUCTS": "Missing Ingredients",
+    "DISH_NAME": "Dish Name",
+    "DISH_NAME_PLACEHOLDER": "e.g., Spaghetti Carbonara",
+    "NO_EXPIRING_PRODUCTS": "Great! No products expiring soon",
+    "NO_EXPIRING_PRODUCTS_DESC": "All your products are fresh and have plenty of time before expiring",
+    "PRODUCTS_EXPIRING_SOON": "Products Expiring Soon",
+    "PRODUCTS_EXPIRING": "products",
+    "EXPIRING_PRODUCTS_LIST": "Products to Use",
+    "SUGGESTED_RECIPE": "Suggested Recipe",
+    "COOK_NOW": "Cook Now",
+    "COOK_RECIPE": "Cook Recipe",
+    "COOK_INFO": "When you mark this recipe as cooked, we'll automatically deduct the used ingredients from your inventory",
+    "NOT_AVAILABLE": "not available",
+    "MARK_AS_COOKED": "Mark as Cooked",
+    "CONFIRM_COOK": "Confirm Cooking",
+    "CONFIRM_COOK_DESC": "This will deduct the recipe ingredients from your inventory. Continue?",
+    "SAVE_RECIPE": "Save Recipe",
+    "SAVE_RECIPE_INFO": "You can edit the recipe details before saving",
+    "RECIPE_NAME": "Recipe Name",
+    "RECIPE_NAME_PLACEHOLDER": "Enter recipe name",
+    "DESCRIPTION": "Description",
+    "DESCRIPTION_PLACEHOLDER": "Brief description of the dish",
+    "COOKING_TIME": "Cooking Time",
+    "CALORIES": "Calories",
+    "CATEGORY": "Category",
+    "CATEGORY_PLACEHOLDER": "e.g., Main Course, Dessert"
+  },
+  "CONFIRM_DELETE_RECIPE": "Are you sure you want to delete {{name}}?"
 }
