--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -123,7 +123,11 @@
     "PROFILE_NOT_LOADED": "Не вдалося завантажити профіль",
     "INVALID_BUDGET": "Будь ласка, введіть коректну суму бюджету",
     "FILL_REQUIRED_FIELDS": "Заповніть обов'язкові поля",
-    "INVALID_QUANTITY": "Введіть коректну кількість"
+    "INVALID_QUANTITY": "Введіть коректну кількість",
+    "DISH_NAME_REQUIRED": "Будь ласка, введіть назву страви",
+    "RECIPE_NOT_FOUND": "Рецепт не знайдено",
+    "RECIPE_NOT_SAVED": "Будь ласка, спочатку збережіть рецепт",
+    "RECIPE_NAME_REQUIRED": "Назва рецепту обов'язкова"
   },
   "SUCCESS": {
     "MEMBER_ADDED": "Члена сім'ї успішно додано",
@@ -136,7 +140,11 @@
     "LANGUAGE_CHANGED": "Мову успішно змінено",
     "ITEM_DELETED": "Продукт видалено з холодильника",
     "ITEM_ADDED": "Продукт додано до холодильника",
-    "ITEM_UPDATED": "Продукт оновлено"
+    "ITEM_UPDATED": "Продукт оновлено",
+    "RECIPE_GENERATED": "Рецепт успішно згенеровано!",
+    "RECIPE_SAVED": "Рецепт успішно збережено",
+    "RECIPE_COOKED": "Чудово! Інгредієнти віднято з інвентаря",
+    "RECIPE_DELETED": "Рецепт видалено"
   },
   "I_AGREE_TO": "Я погоджуюсь з",
   "AND": "та",
@@ -193,5 +201,56 @@
     "EXPIRING_SOON": "Скоро зіпсується",
     "EXPIRES_ON": "Придатний до {{date}}"
   },
-  "CONFIRM_DELETE_ITEM": "Ви впевнені, що хочете видалити {{name}}?"
+  "CONFIRM_DELETE_ITEM": "Ви впевнені, що хочете видалити {{name}}?",
+  "RECIPES": {
+    "GENERATE": "Генерувати рецепт",
+    "FROM_INVENTORY": "З холодильника",
+    "FROM_INVENTORY_DESC": "Згенеруйте рецепт з продуктів у вашому холодильнику",
+    "FROM_INVENTORY_INFO": "Ми створимо смачний рецепт з продуктів, які є у вашому холодильнику",
+    "CUSTOM": "Власний рецепт",
+    "CUSTOM_DESC": "Згенеруйте рецепт конкретної страви",
+    "CUSTOM_INFO": "Скажіть нам, яку страву ви хочете приготувати, і ми створимо рецепт з інгредієнтами та інструкціями",
+    "EXPIRING": "Продукти, що псуються",
+    "EXPIRING_DESC": "Ідеї рецептів з продуктів, які скоро зіпсуються",
+    "SAVED": "Збережені рецепти",
+    "EMPTY_TITLE": "Ще немає збережених рецептів",
+    "EMPTY_SUBTITLE": "Генеруйте та зберігайте рецепти, щоб побачити їх тут",
+    "PORTIONS": "Кількість порцій",
+    "SERVINGS": "порцій",
+    "MINUTES": "хв",
+    "KCAL": "ккал",
+    "INGREDIENTS": "Інгредієнти",
+    "INSTRUCTIONS": "Інструкція приготування",
+    "GENERATING": "Генеруємо рецепт...",
+    "GENERATE_BUTTON": "Згенерувати рецепт",
+    "SAVE": "Зберегти рецепт",
+    "GENERATE_NEW": "Згенерувати ще",
+    "MISSING_PRODUCTS": "Бракує інгредієнтів",
+    "DISH_NAME": "Назва страви",
+    "DISH_NAME_PLACEHOLDER": "наприклад, Спагетті Карбонара",
+    "NO_EXPIRING_PRODUCTS": "Чудово! Немає продуктів, що псуються",
+    "NO_EXPIRING_PRODUCTS_DESC": "Всі ваші продукти свіжі і мають достатньо часу до завершення терміну придатності",
+    "PRODUCTS_EXPIRING_SOON": "Продукти, що скоро зіпсуються",
+    "PRODUCTS_EXPIRING": "продуктів",
+    "EXPIRING_PRODUCTS_LIST": "Продукти для використання",
+    "SUGGESTED_RECIPE": "Запропонований рецепт",
+    "COOK_NOW": "Приготувати зараз",
+    "COOK_RECIPE": "Приготувати рецепт",
+    "COOK_INFO": "Коли ви позначите цей рецепт як приготований, ми автоматично віднімемо використані інгредієнти з вашого інвентаря",
+    "NOT_AVAILABLE": "недоступно",
+    "MARK_AS_COOKED": "Позначити як приготоване",
+    "CONFIRM_COOK": "Підтвердити приготування",
+    "CONFIRM_COOK_DESC": "Це віднімає інгредієнти рецепту з вашого інвентаря. Продовжити?",
+    "SAVE_RECIPE": "Зберегти рецепт",
+    "SAVE_RECIPE_INFO": "Ви можете відредагувати деталі рецепту перед збереженням",
+    "RECIPE_NAME": "Назва рецепту",
+    "RECIPE_NAME_PLACEHOLDER": "Введіть назву рецепту",
+    "DESCRIPTION": "Опис",
+    "DESCRIPTION_PLACEHOLDER": "Короткий опис страви",
+    "COOKING_TIME": "Час приготування",
+    "CALORIES": "Калорії",
+    "CATEGORY": "Категорія",
+    "CATEGORY_PLACEHOLDER": "наприклад, Основна страва, Десерт"
+  },
+  "CONFIRM_DELETE_RECIPE": "Ви впевнені, що хочете видалити {{name}}?"
 }
